# EPQ

./: .gitignore  .gitmodules  CMakeLists.txt  EPQ.sln  README.md
Game/: Game.vcxproj  Game.vcxproj.filters
Game/assets/data/: blocks.json  items.json
Game/assets/shaders/: batch.vert  cubemap.vert  highlight_shader.frag  optimisedtexarray.frag  optimisedtexarray.vert  texture.frag  texturearray.frag
Game/lib/: glfw3.lib
Game/profiling/2021-10-30 21-58-01/: 2021-10-30 21-58-52.csv
Game/profiling/2021-10-30 22-24-04/: 2021-10-30 22-25-15.csv
Game/src/: main.cpp
Game/src/Core/: Assets.cpp  Assets.h  Core.cpp  Core.h  Game.cpp  Game.h  Input.cpp  Input.h  Profiling.cpp  Profiling.h  Timer.cpp  Timer.h
Game/src/Data/: Blocks.cpp  Blocks.h  CubeData.cpp  CubeData.h
Game/src/Game/: Chunk.cpp  Chunk.h  Player.cpp  Player.h  World.cpp  World.h  WorldGeneration.cpp  WorldGeneration.h
Game/src/Graphics/: BatchRenderer.cpp  BatchRenderer.h  Buffers.cpp  Buffers.h  Cubemap.cpp  DebugRender.cpp  DebugRender.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  TextureArray.cpp  TextureArray.h
Game/src/Maths/: Maths.cpp  Maths.h  Types.h
Game/src/Physics/: AABB.cpp  AABB.h  Frustum.h  VoxelRayCast.cpp
assets/data/: items.json
assets/shaders/: batch.frag  cubemap.frag  default.vert  highlight_shader.frag  highlight_shader.vert  optimisedtexarray.frag  optimisedtexarray.vert  texture.vert  texturearray.vert
assets/textures/: hotbar_icon_piskel.piskel
src/: main.cpp
src/Core/: Assets.cpp  Assets.h  Core.cpp  Core.h  Input.cpp  Profiler.cpp
src/Data/: Blocks.cpp  Blocks.h  CubeData.cpp  CubeData.h
src/Game/: Chunk.cpp  Chunk.h  Player.h  World.cpp  World.h  WorldGeneration.cpp  WorldGeneration.h
src/Graphics/: BatchRenderer.cpp  BatchRenderer.h  Buffers.h  Cubemap.cpp  Cubemap.h  Info.cpp  Info.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
src/Maths/: Maths.cpp  Maths.h
src/Physics/: Frustum.cpp  VoxelRayCast.cpp  VoxelRayCast.h
